        Fix bytecode.pl call in cperl core.
        Optimize CopFILE_set by caching gv_fetchfile (CPANEL-7887)
        Abstract utf8_heavy loader (CPANEL-5417, CPANEL-6105, #369, #364) fixing
        redefinition warnings, fixing %INC (atoomic)
        Improve NV precision, use %17g (atoomic #373)
        Fix delayed cvref initialization of XS module functions (#376)

1.54_03 2016-05-09 rurban
        Released with cperl-5.22.2
        * C: Remove hash argument from share_hek, always rehash.
        Work on PERL_DESTRUCT_LEVEL=2 Unbalanced string table refcount issues.
        Fix for CVf_CONST CVs with cperl (constant::import)
        Replace %Lu with %lu/%u
        Fix for shared xpviv with 5.24. This asserts now if unshared.
        * perlcc/cc_harness/TestBC: many more PERL_CORE fixes, to workaround
          broken ExtUtils::Embed::ldopts
        * tests: skip perlcc with -m32 cross and PERL_CORE. Can only work reliable
          on individual CPAN setups, but not with CORE smoking. Blame Configure
        Replace test.pl with TestBC.pm. Blame core harness

1.54 2016-02-26 rurban
        cperl fixes and 5.22 memory improvements. cperl now also supported,
        even included CORE, but ByteLoader still broken.

        * C: Fix defined for RV since 5.20 and ithreads (#354)
        Fix anon functions in INIT block (#352) (atoomic)
          and more const CV fixes.
        Fix C.xs for old non-c99 compilers. i.e. msvc6
        Fix segfault from PVMG (#348) (atoomic), regression added
          for match once
        Fix stack corruption in HV::ENAMES (#351)
        Fix SEGV with empty get_cv(), esp. from non-XS functions (#358)
        Fixed 5.22 padname length limitation of max 60. Also using less memory. (#361)
        New -O2 option -fcow since 5.20 to cow most static strings with ~6%
          memory savings (#361)
        Support cperl5.22.2 with AvSTATIC and AvIsCOW. ~6% less memory. (#361)